--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <i class="fa-solid fa-magnifying-glass"></i>
 
             <input type="text" placeholder="search here...."> 
-            <button>serach</button>
+            <button>search</button>
         </form>
 
 
